Fix row height in files list on small screens
FossilOrigin-Name: b9179e11dcc68c00ccb64bf648bbea6cf66071cf75f586d5a3360c9adc8752f5

--- a/src/www/admin/static/styles/07-tables.css
+++ b/src/www/admin/static/styles/07-tables.css
@@ -181,10 +181,6 @@ table.list .separator {
 }
 
 /* Files list */
-table.list.files tbody tr td {
-    height: 2em;
-}
-
 table.list.files .date {
     text-align: left;
     color: var(--gBorderColor);
